📚 Auto-update: News data refreshed - 2025-12-24 12:21 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28078,5 +28078,93 @@
         "published": "Wed, 24 Dec 2025 10:54:16 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The regulatory filing of OYO parent company, PRISM Life, says that the \"consent and approval of the shareholders  is hereby accorded to offer a number of equity shares\" to raise the Rs 6,650 IPO</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-oyo-parent-prism-shareholder-nod-rs-6650-cr-ipo/\">OYO Parent PRISM Gets Shareholder Nod to Raise Rs 6,650 Crore Via IPO</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.wired.com/story/apple-app-making-course-michigan-state-university/",
+        "title": "Apple\u2019s App Course Runs $20,000 a Student. Is It Really Worth It?",
+        "link": "https://www.wired.com/story/apple-app-making-course-michigan-state-university/",
+        "published": "Wed, 24 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Apple, Michigan taxpayers, and one of Detroit\u2019s wealthiest families spent roughly $30 million training hundreds of people to build iPhone apps. Not everyone lands coding jobs right away."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-desk-accessories/",
+        "title": "The Best Desk Accessories (2025)",
+        "link": "https://www.wired.com/gallery/best-desk-accessories/",
+        "published": "Wed, 24 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Brighten up your bare desk with these cute, fidgety, functional, and stylish desk accessories."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/us-bans-former-eu-commissioner-and-others-over-social-media-rules-121804097.html?src=rss",
+        "title": "US bans former EU Commissioner and others over social media rules",
+        "link": "https://www.engadget.com/big-tech/us-bans-former-eu-commissioner-and-others-over-social-media-rules-121804097.html?src=rss",
+        "published": "Wed, 24 Dec 2025 12:18:04 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The Trump administration has issued travel bans that prohibit five European tech researchers, including one former EU Commissioner, from entering the United States. \u201cFor far too long, ideologues in Europe have led organized efforts to coerce American platforms to punish American viewpoints they oppose. The Trump Administration will no longer tolerate these egregious acts of extraterritorial censorship,\u201d <a class=\"link\" href=\"https://x.com/UnderSecPD/status/2003567940462084439\" target=\"_blank\""
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/24/1129294/ronald-deibert-citizen-lab-digital-threats-spies-cybersecurity/",
+        "title": "Meet the man hunting the spies in your smartphone",
+        "link": "https://www.technologyreview.com/2025/12/24/1129294/ronald-deibert-citizen-lab-digital-threats-spies-cybersecurity/",
+        "published": "Wed, 24 Dec 2025 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "In April 2025, Ronald Deibert left all electronic devices at home in Toronto and boarded a plane. When he landed in Illinois, he took a taxi to a mall and headed directly to the Apple Store to purchase a new laptop and iPhone. He\u2019d wanted to keep the risk of having his personal devices confiscated&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/24/1130191/good-climate-news-2025/",
+        "title": "Four bright spots in climate news in 2025",
+        "link": "https://www.technologyreview.com/2025/12/24/1130191/good-climate-news-2025/",
+        "published": "Wed, 24 Dec 2025 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Climate news hasn\u2019t been great in 2025. Global greenhouse-gas emissions hit record highs (again). This year is set to be either the second or third warmest on record. Climate-fueled disasters like wildfires in California and flooding in Indonesia and Pakistan devastated communities and caused billions in damage. In addition to these worrying indicators of our&#8230;"
+    },
+    {
+        "id": "https://blog.google/technology/ai/2025-research-breakthroughs/",
+        "title": "Google 2025 recap: Research breakthroughs of the year",
+        "link": "https://blog.google/technology/ai/2025-research-breakthroughs/",
+        "published": "Wed, 24 Dec 2025 09:30:58 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46374018\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/microsoft-working-to-slash-use-of-c-and-c-programming-languages-by-2030/articleshow/126159616.cms",
+        "title": "Microsoft working to slash use of C and C++ programming languages by 2030",
+        "link": "https://economictimes.indiatimes.com/tech/technology/microsoft-working-to-slash-use-of-c-and-c-programming-languages-by-2030/articleshow/126159616.cms",
+        "published": "Wed, 24 Dec 2025 17:12:10 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The two languages currently play a major role in Microsoft\u2019s products. C is deeply embedded in the Windows kernel and many low-level system components, including the Win32 APIs, while C++ is widely used to build native Windows applications, according to Windows Latest, a Microsoft news updates website."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/how-intels-dealmaker-ceo-charmed-us-president-donald-trump/articleshow/126159611.cms",
+        "title": "How Intel's dealmaker CEO charmed US President Donald Trump",
+        "link": "https://economictimes.indiatimes.com/tech/technology/how-intels-dealmaker-ceo-charmed-us-president-donald-trump/articleshow/126159611.cms",
+        "published": "Wed, 24 Dec 2025 17:00:01 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Intel CEO Lip-Bu Tan recently found himself under fire from presidential criticism but skillfully transformed the situation into a golden opportunity. By striking a multi-billion dollar deal with the government, he secured essential funding and an equity stake that revitalised Intel\u2019s ambitions."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/samsung-sdi-kg-mobility-form-alliance-for-cylindrical-battery-pack-for-future-evs-report/articleshow/126159570.cms",
+        "title": "Samsung SDI, KG Mobility form alliance for cylindrical battery pack for future EVs: Report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/samsung-sdi-kg-mobility-form-alliance-for-cylindrical-battery-pack-for-future-evs-report/articleshow/126159570.cms",
+        "published": "Wed, 24 Dec 2025 16:56:49 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Samsung SDI and KG Mobility entered into a strategic alliance to create cylindrical battery packs for future EVs. The two companies reportedly signed a formal agreement on Monday in Seoul to work together on these new technologies."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/deeptech-funding-momentum-2026-vc-cautious-optimism",
+        "title": "Deeptech funding to gather momentum in 2026 as VC firms dig deep with cautious optimism",
+        "link": "https://yourstory.com/2025/12/deeptech-funding-momentum-2026-vc-cautious-optimism",
+        "published": "Wed, 24 Dec 2025 11:22:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Venture capital firms delivered on their promise to step up deeptech investments in 2025. The coming year could see VCs writing larger cheques to companies that have a proven product-market fit, lower technical risks, and strong fundamentals."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/anicut-capital-raises-rs-1275-cr-in-third-private-credit-fund-gaf-iv",
+        "title": "Anicut Capital raises Rs 1,275 Cr in third private credit fund GAF-IV",
+        "link": "https://yourstory.com/2025/12/anicut-capital-raises-rs-1275-cr-in-third-private-credit-fund-gaf-iv",
+        "published": "Wed, 24 Dec 2025 08:14:23 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Anicut Capital's third fund includes a GIFT City-based dollar feeder, enabling global investors to participate in India\u2019s private credit opportunity."
     }
 ]
