--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -28166,5 +28166,93 @@
         "published": "Wed, 24 Dec 2025 08:14:23 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Anicut Capital's third fund includes a GIFT City-based dollar feeder, enabling global investors to participate in India\u2019s private credit opportunity."
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/848368/gen-ai-video-games-2025",
+        "title": "In 2025, AI became a lightning rod for gamers and developers",
+        "link": "https://www.theverge.com/entertainment/848368/gen-ai-video-games-2025",
+        "published": "2025-12-24T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "2025 was the year generative AI made its presence felt in the video game industry. Its use has been discovered in some of the most popular games of the year, and CEOs from some of the largest game studios claim it's being implemented everywhere in the industry including in their own development processes. Meanwhile, rank-and-file [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/work-from-home-gift-ideas/",
+        "title": "25 Work From Home Gift Ideas",
+        "link": "https://www.wired.com/gallery/work-from-home-gift-ideas/",
+        "published": "Wed, 24 Dec 2025 12:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Upgrade your loved one\u2019s home office with these picks that make every day a little easier\u2014and a little more fun."
+    },
+    {
+        "id": "https://arstechnica.com/culture/2025/12/tv-technica-our-favorite-shows-of-2025/",
+        "title": "TV Technica: Our favorite shows of 2025",
+        "link": "https://arstechnica.com/culture/2025/12/tv-technica-our-favorite-shows-of-2025/",
+        "published": "Wed, 24 Dec 2025 13:00:53 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Netflix and Apple TV dominate this year's list with thrillers, fantasy, sci-fi, and murder."
+    },
+    {
+        "id": "https://arstechnica.com/information-technology/2025/12/how-do-ai-coding-agents-work-we-look-under-the-hood/",
+        "title": "How AI coding agents work\u2014and what to remember if you use them",
+        "link": "https://arstechnica.com/information-technology/2025/12/how-do-ai-coding-agents-work-we-look-under-the-hood/",
+        "published": "Wed, 24 Dec 2025 12:00:27 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "From compression tricks to multi-agent teamwork, here's what makes them tick."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/how-to-redeem-game-codes-on-the-nintendo-switch-2-130059847.html?src=rss",
+        "title": "How to redeem game codes on the Nintendo Switch 2",
+        "link": "https://www.engadget.com/gaming/nintendo/how-to-redeem-game-codes-on-the-nintendo-switch-2-130059847.html?src=rss",
+        "published": "Wed, 24 Dec 2025 13:00:59 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Digital game codes remain one of the simplest ways to add new titles to a Nintendo library. The <a href=\"https://www.engadget.com/gaming/nintendo/nintendo-switch-2-review-more-of-what-you-love-120048430.html\">Nintendo Switch 2</a> handles code redemption in a familiar way, building on the same process used on the original Switch. You can redeem a download code directly from the eShop on the console, or through a browser on a phone or desktop. Both routes link the purchase to the same Nintendo"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/samsungs-latest-odyssey-gaming-monitor-has-a-32-inch-6k-screen-with-glasses-free-3d-130051748.html?src=rss",
+        "title": "Samsung's latest Odyssey gaming monitor has a 32-inch 6K screen with glasses-free 3D",
+        "link": "https://www.engadget.com/computing/accessories/samsungs-latest-odyssey-gaming-monitor-has-a-32-inch-6k-screen-with-glasses-free-3d-130051748.html?src=rss",
+        "published": "Wed, 24 Dec 2025 13:00:51 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Ahead of CES 2026, Samsung has <a href=\"https://news.samsung.com/global/samsung-unveils-new-odyssey-gaming-monitor-lineup-featuring-world-first-6k-3d-and-ultra-high-resolution-displays\">unveiled</a> a number of impressive gaming monitors that flaunt 3D and very high refresh rates. The headliner is the 32-inch Odyssey 3D, &quot;the world's first 6K display with glasses free 3D,&quot; according to Samsung. Along with the high resolution, it offers a 165Hz refresh rate (boosted to 330Hz through "
+    },
+    {
+        "id": "https://laike9m.com/blog/avoid-mini-frameworks,171/",
+        "title": "Avoid Mini-Frameworks",
+        "link": "https://laike9m.com/blog/avoid-mini-frameworks,171/",
+        "published": "Wed, 24 Dec 2025 12:04:02 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46374856\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/buzz/anicut-capital-marks-final-close-of-third-private-credit-fund-at-inr-1275-cr/",
+        "title": "Anicut Capital Marks Final Close Of Third Private Credit Fund At INR 1,275 Cr",
+        "link": "https://inc42.com/buzz/anicut-capital-marks-final-close-of-third-private-credit-fund-at-inr-1275-cr/",
+        "published": "Wed, 24 Dec 2025 13:18:58 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Anicut Capital Marks Final Close Of Third Private Credit Fund At INR 1,275 Cr\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/stakcbox-funding-featured-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Alternate investment firm Anicut Capital has announced the final close of its third private credit fund Grand Anicut Fund IV&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/indian-unicorn-tracker-funding-investors-revenue-and-more/",
+        "title": "Indian Unicorn Tracker: Funding, Investors, Revenue And More",
+        "link": "https://inc42.com/features/indian-unicorn-tracker-funding-investors-revenue-and-more/",
+        "published": "Wed, 24 Dec 2025 13:01:39 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/FTR-100-3.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />The year 2025 kicked off on a high note for India\u2019s startup ecosystem, with Netradyne becoming the first unicorn just&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/urban-company-new-verticals-new-realities-new-pressures/",
+        "title": "2025 For Urban Company: New Verticals, New Realities, New Pressures",
+        "link": "https://inc42.com/features/urban-company-new-verticals-new-realities-new-pressures/",
+        "published": "Wed, 24 Dec 2025 12:57:37 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Urban Company&#039;s 2025: New Verticals, Realities And Pressures\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Urban-Company-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />After a journey of nearly a decade, Urban Company expanded its wings beyond services to enter the products space sometime&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-algorithms-gig-workers-india-new-study/",
+        "title": "Algorithms Decide How Gig Workers Work In India, New Study Finds",
+        "link": "https://www.medianama.com/2025/12/223-algorithms-gig-workers-india-new-study/",
+        "published": "Wed, 24 Dec 2025 12:40:29 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>A study conducted by the National Law School of India University says that algorithms today largely control what a gig worker's daily schedule looks like.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-algorithms-gig-workers-india-new-study/\">Algorithms Decide How Gig Workers Work In India, New Study Finds</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
