📚 Auto-update: News data refreshed - 2025-12-24 14:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28254,5 +28254,61 @@
         "published": "Wed, 24 Dec 2025 12:40:29 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>A study conducted by the National Law School of India University says that algorithms today largely control what a gig worker's daily schedule looks like.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-algorithms-gig-workers-india-new-study/\">Algorithms Decide How Gig Workers Work In India, New Study Finds</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/24/how-to-track-santa-claus-this-christmas-eve-2022/",
+        "title": "How to track Santa Claus this Christmas Eve using AI",
+        "link": "https://techcrunch.com/2025/12/24/how-to-track-santa-claus-this-christmas-eve-2022/",
+        "published": "Wed, 24 Dec 2025 14:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "If you\u2019re a parent with young children, then you&#8217;ll probably hear this a lot on Christmas Eve: \u201cWhere\u2019s Santa right now?\u201d With tracking tools like the NORAD Santa Tracker and Google\u2019s Santa Tracker, everyone can know when Father Christmas will arrive. Plus, there are now some new AI tools to bring the holiday magic. Here\u2019s [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/845388/netflix-best-shows-movies-2025",
+        "title": "The best shows and movies to stream on Netflix in 2025",
+        "link": "https://www.theverge.com/entertainment/845388/netflix-best-shows-movies-2025",
+        "published": "2025-12-24T08:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Netflix has had an interesting year. Its ad tier, introduced last year, has grown significantly, and its live TV initiative has expanded to include not only weird one-offs like hot-dog-eating grudge matches but also WWE programming. Taking KPop Demon Hunters off Sony's hands for the business equivalent of $200 in a potato chip bag also [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/how-to-choose-a-computer-monitor/",
+        "title": "How to Choose a Computer Monitor (2025): Everything You Need to Know",
+        "link": "https://www.wired.com/story/how-to-choose-a-computer-monitor/",
+        "published": "Wed, 24 Dec 2025 13:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Monitors are cheaper, faster, and more beautiful than ever. Here\u2019s how to choose one that will suit your needs and budget."
+    },
+    {
+        "id": "https://www.engadget.com/cybersecurity/pro-russian-hacker-group-claims-responsibility-for-ddos-attack-on-french-postal-service-140015323.html?src=rss",
+        "title": "Pro-Russian hacker group claims responsibility for DDoS attack on French postal service",
+        "link": "https://www.engadget.com/cybersecurity/pro-russian-hacker-group-claims-responsibility-for-ddos-attack-on-french-postal-service-140015323.html?src=rss",
+        "published": "Wed, 24 Dec 2025 14:00:15 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A pro-Russian hacker group has come forward as the perpetrator of a DDoS attack on the French national postal service La Poste that took place on December 22, according to <a href=\"https://apnews.com/article/france-cyberattack-postal-service-russia-09bd0156aae99e14e619051756574853\"><em><ins>Reuters</ins></em></a>. The distributed denial-of-service attack took central computer systems at La Poste entirely offline and caused major disruptions in package deliveries just days before Christmas.</p"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/toyotas-prius-prime-saved-me-gas-money-but-probably-not-the-environment-133027378.html?src=rss",
+        "title": "Toyota's Prius Prime saved me gas money but probably not the environment",
+        "link": "https://www.engadget.com/transportation/toyotas-prius-prime-saved-me-gas-money-but-probably-not-the-environment-133027378.html?src=rss",
+        "published": "Wed, 24 Dec 2025 13:30:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>I\u2019ve always wondered what it would be like to own a plug-in hybrid, and recently, fate handed me that opportunity. On a recent trip to Vancouver, I rented a 2024 <a href=\"https://www.engadget.com/toyota-2023-prius-prime-plug-in-hybrid-162057073.html\">Toyota Prius Prime</a> for nearly two months \u2014 the ideal scenario to try out North America\u2019s most popular PHEV.</p>\n<h2 id=\"jump-link-my-experience-with-the-prius-prime\">My experience with the Prius Prime</h2>\n<p>Previously, the words &quot;Prius"
+    },
+    {
+        "id": "https://ammil.industries/the-port-i-couldnt-ship/",
+        "title": "The Port I couldn't Ship",
+        "link": "https://ammil.industries/the-port-i-couldnt-ship/",
+        "published": "Thu, 18 Dec 2025 20:17:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46318080\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/samsung-ramps-up-india-push/articleshow/126161146.cms",
+        "title": "Samsung ramps up India push; Atomberg, Kuku FM's FY25 numbers",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/samsung-ramps-up-india-push/articleshow/126161146.cms",
+        "published": "Wed, 24 Dec 2025 19:31:25 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "India may become the next Samsung manufacturing hub. This and more in today\u2019s ETtech Top 5."
     }
 ]
