📚 Auto-update: News data refreshed - 2025-12-24 15:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28310,5 +28310,125 @@
         "published": "Wed, 24 Dec 2025 19:31:25 +0530",
         "source": "Tech-Economic Times",
         "summary": "India may become the next Samsung manufacturing hub. This and more in today\u2019s ETtech Top 5."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/24/apple-pauses-app-store-changes-in-texas-after-court-blocks-age-assurance-law/",
+        "title": "Apple pauses app store changes in Texas after court blocks age assurance law",
+        "link": "https://techcrunch.com/2025/12/24/apple-pauses-app-store-changes-in-texas-after-court-blocks-age-assurance-law/",
+        "published": "Wed, 24 Dec 2025 15:02:06 +0000",
+        "source": "TechCrunch",
+        "summary": "Apple said it will pause its plans for compliance with the new law in Texas but notes other age assurance tech remains available to developers."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/24/the-14-top-agtech-food-tech-startups-from-disrupt-startup-battlefield/",
+        "title": "The 14 top agtech, food tech startups from Disrupt Startup Battlefield",
+        "link": "https://techcrunch.com/2025/12/24/the-14-top-agtech-food-tech-startups-from-disrupt-startup-battlefield/",
+        "published": "Wed, 24 Dec 2025 15:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Here is the full list of the agtech and food tech Startup Battlefield 200 selectees, along with a note on what made us select them for the competition."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/24/italy-tells-meta-to-suspend-its-policy-that-bans-rival-ai-chatbots-from-whatsapp/",
+        "title": "Italy tells Meta to suspend its policy that bans rival AI chatbots from WhatsApp",
+        "link": "https://techcrunch.com/2025/12/24/italy-tells-meta-to-suspend-its-policy-that-bans-rival-ai-chatbots-from-whatsapp/",
+        "published": "Wed, 24 Dec 2025 14:40:34 +0000",
+        "source": "TechCrunch",
+        "summary": "Italy has ordered Meta to suspend its policy that bans companies from using WhatsApp's business tools to offer their own AI chatbots on the popular chat app."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/684281/sony-playstation-5-ps5-pro-christmas-deal-sale-2025",
+        "title": "Sony\u2019s souped-up PlayStation 5 Pro is $100 off for the rest of today",
+        "link": "https://www.theverge.com/gadgets/684281/sony-playstation-5-ps5-pro-christmas-deal-sale-2025",
+        "published": "2025-12-24T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Sony\u2019s full suite of PlayStation 5 consoles jumped in price in August due to increased US tariffs, but now through Christmas, you can save $100 on several models. This discount is especially great if you planned to go big with Sony\u2019s PS5 Pro, the company\u2019s priciest, most powerful console yet. Normally $749.99, you can currently [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/jbl-bar-500-mk2/",
+        "title": "JBL Bar 500MK2 Review: A Fantastic Soundbar System",
+        "link": "https://www.wired.com/review/jbl-bar-500-mk2/",
+        "published": "Wed, 24 Dec 2025 15:05:00 +0000",
+        "source": "WIRED",
+        "summary": "This compact 2.1 soundbar system offers realistic Dolby Atmos surround sound."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/speed-act-passes-in-house-despite-changes-that-threaten-clean-power-projects/",
+        "title": "SPEED Act passes in House despite changes that threaten clean power projects",
+        "link": "https://arstechnica.com/tech-policy/2025/12/speed-act-passes-in-house-despite-changes-that-threaten-clean-power-projects/",
+        "published": "Wed, 24 Dec 2025 13:30:59 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The bill would significantly curtail scope of the federal environmental review process."
+    },
+    {
+        "id": "https://xania.org/202512/24-cunning-clang",
+        "title": "When Compilers Surprise You",
+        "link": "https://xania.org/202512/24-cunning-clang",
+        "published": "Wed, 24 Dec 2025 13:27:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46375384\">Comments</a>"
+    },
+    {
+        "id": "https://parentheticallyspeaking.org/articles/bandit-inbox/",
+        "title": "Your Inbox Is a Bandit",
+        "link": "https://parentheticallyspeaking.org/articles/bandit-inbox/",
+        "published": "Mon, 22 Dec 2025 04:04:04 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46351196\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/hisense-xr10-projector-ces-2026/",
+        "title": "Hisense just unveiled a laser projector that could make OLED TVs feel unnecessary",
+        "link": "https://www.zdnet.com/article/hisense-xr10-projector-ces-2026/",
+        "published": "Wed, 24 Dec 2025 15:08:00 GMT",
+        "source": "Latest news",
+        "summary": "Ahead of CES 2026, the company has unveiled two new projector models with some ambitious specs."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tv-usb-port-update-reset/",
+        "title": "Your TV's USB port has a forgotten feature that can revitalize an old system for free",
+        "link": "https://www.zdnet.com/article/tv-usb-port-update-reset/",
+        "published": "Wed, 24 Dec 2025 15:06:00 GMT",
+        "source": "Latest news",
+        "summary": "Updating your TV's firmware can boost performance and fix bugs - even without internet."
+    },
+    {
+        "id": "https://www.zdnet.com/article/fairphone-gen-6-smartphone-review/",
+        "title": "I tried the viral Fairphone 6, and it's one feature away from replacing my Pixel",
+        "link": "https://www.zdnet.com/article/fairphone-gen-6-smartphone-review/",
+        "published": "Wed, 24 Dec 2025 14:45:00 GMT",
+        "source": "Latest news",
+        "summary": "If you're tired of phones designed for planned obsolescence, Fairphone might be your next favorite mobile device."
+    },
+    {
+        "id": "https://www.zdnet.com/article/amazon-fire-tv-omni-qled-tv-review/",
+        "title": "Should you buy Amazon's Fire TV Omni QLED? My verdict after replacing my LG with one",
+        "link": "https://www.zdnet.com/article/amazon-fire-tv-omni-qled-tv-review/",
+        "published": "Wed, 24 Dec 2025 14:18:00 GMT",
+        "source": "Latest news",
+        "summary": "Amazon's latest flagship TV may just be the best mix of quality and price, but should you buy one over the bigger brands?"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-sync-passkeys-across-android-iphone-mac-pc/",
+        "title": "How to sync passkeys across your Android, iPhone, Mac, and PC with Chrome - it's easy",
+        "link": "https://www.zdnet.com/article/how-to-sync-passkeys-across-android-iphone-mac-pc/",
+        "published": "Wed, 24 Dec 2025 14:13:00 GMT",
+        "source": "Latest news",
+        "summary": "With Google Chrome's built-in Password Manager, you can quickly store and sync passkeys across all your devices for free. Here's how it works."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/atombergs-fy25-revenues-rise-20-to-rs-958-crore-losses-narrow/articleshow/126162046.cms",
+        "title": "Atomberg\u2019s FY25 revenues rise 20% to Rs 958 crore, losses narrow",
+        "link": "https://economictimes.indiatimes.com/tech/startups/atombergs-fy25-revenues-rise-20-to-rs-958-crore-losses-narrow/articleshow/126162046.cms",
+        "published": "Wed, 24 Dec 2025 20:06:28 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The Mumbai-based company\u2019s operating revenues rose 20% to Rs 958.4 crore in FY25 from Rs 796.9 crore a year earlier, while its net loss narrowed 41% to Rs 117.4 crore from Rs 199 crore in FY24."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/kuku-fm-reports-175-jump-in-fy25-revenue/articleshow/126161935.cms",
+        "title": "Kuku FM reports 175% jump in FY25 revenue",
+        "link": "https://economictimes.indiatimes.com/tech/technology/kuku-fm-reports-175-jump-in-fy25-revenue/articleshow/126161935.cms",
+        "published": "Wed, 24 Dec 2025 19:56:10 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The platform's operating revenue during fiscal year 2025 was at Rs 242 crore, up 175% from FY24, while net loss increased by 59% to Rs 153 crore, according to filings with the Registrar of Companies (ROC). Total expenses for the financial year more than doubled to Rs 411 crore."
     }
 ]
