--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -28430,5 +28430,93 @@
         "published": "Wed, 24 Dec 2025 19:56:10 +0530",
         "source": "Tech-Economic Times",
         "summary": "The platform's operating revenue during fiscal year 2025 was at Rs 242 crore, up 175% from FY24, while net loss increased by 59% to Rs 153 crore, according to filings with the Registrar of Companies (ROC). Total expenses for the financial year more than doubled to Rs 411 crore."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/24/the-9-top-biotech-startups-from-disrupt-startup-battlefield/",
+        "title": "The 9 top biotech startups from Disrupt Startup Battlefield",
+        "link": "https://techcrunch.com/2025/12/24/the-9-top-biotech-startups-from-disrupt-startup-battlefield/",
+        "published": "Wed, 24 Dec 2025 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Here is the full list of the biotech and pharma Startup Battlefield 200 selectees, along with a note on what made us select them for the competition."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/24/how-mill-closed-the-deal-with-amazon-and-whole-foods/",
+        "title": "How Mill closed the deal with Amazon and Whole Foods",
+        "link": "https://techcrunch.com/2025/12/24/how-mill-closed-the-deal-with-amazon-and-whole-foods/",
+        "published": "Wed, 24 Dec 2025 15:30:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Matt Rogers's food waste startup will soon deploy its commercial food waste bins in grocery stores throughout the U.S. Here's how Rogers thinks about preparing a startup for success."
+    },
+    {
+        "id": "https://www.engadget.com/mobile/tablets/how-to-set-up-an-ipad-for-a-child-160001671.html?src=rss",
+        "title": "How to set up an iPad for a child",
+        "link": "https://www.engadget.com/mobile/tablets/how-to-set-up-an-ipad-for-a-child-160001671.html?src=rss",
+        "published": "Wed, 24 Dec 2025 16:00:01 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Creating a child-friendly iPad takes a few extra steps, but Apple\u2019s tools make the process relatively straightforward. From creating a child\u2019s Apple ID to adjusting Screen Time and privacy settings, you can shape how your child uses the device and protect them from inappropriate content. The process varies slightly depending on whether the iPad is new or already in use, but the principles are the same: set up a managed account, connect it to Family Sharing and fine-tune the controls that keep"
+    },
+    {
+        "id": "https://forum.hackliberty.org/t/why-we-abandoned-matrix-the-dark-truth-about-user-security-and-safety/224",
+        "title": "We Abandoned Matrix: The Dark Truth About User Security and Safety (2024)",
+        "link": "https://forum.hackliberty.org/t/why-we-abandoned-matrix-the-dark-truth-about-user-security-and-safety/224",
+        "published": "Wed, 24 Dec 2025 15:06:26 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46376201\">Comments</a>"
+    },
+    {
+        "id": "https://games.jmir.org/2025/1/e84219/",
+        "title": "Super Mario Bros. and Yoshi Games (Yields) Reduced Burnout Risk",
+        "link": "https://games.jmir.org/2025/1/e84219/",
+        "published": "Wed, 24 Dec 2025 13:43:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46375499\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/razer-blade-14-laptop-review/",
+        "title": "My perfect MacBook Pro replacement turned out to be a Windows laptop I didn't see coming",
+        "link": "https://www.zdnet.com/article/razer-blade-14-laptop-review/",
+        "published": "Wed, 24 Dec 2025 16:00:49 GMT",
+        "source": "Latest news",
+        "summary": "The Razer Blade 14 is one of the thinnest gaming laptops I've tested, trading power for portability."
+    },
+    {
+        "id": "https://www.zdnet.com/article/aurzen-d1r-cube-roku-projector-review/",
+        "title": "I replaced my bedroom TV with this $180 Roku projector and can't go back",
+        "link": "https://www.zdnet.com/article/aurzen-d1r-cube-roku-projector-review/",
+        "published": "Wed, 24 Dec 2025 15:59:00 GMT",
+        "source": "Latest news",
+        "summary": "The Aurzen D1R Cube Roku TV projector is fast, bright, and surprisingly fun. It's available at a discounted rate for a limited time."
+    },
+    {
+        "id": "https://www.zdnet.com/article/elevation-lab-5-year-timecapsule-review/",
+        "title": "My AirTags kept dying, so I switched to this tracker that lasts for five years",
+        "link": "https://www.zdnet.com/article/elevation-lab-5-year-timecapsule-review/",
+        "published": "Wed, 24 Dec 2025 15:56:00 GMT",
+        "source": "Latest news",
+        "summary": "An AirTag battery failure at the wrong time can leave your gear vulnerable. Elevation Lab's Time Capsule solves this problem."
+    },
+    {
+        "id": "https://www.zdnet.com/article/creative-stage-pro-sound-bar-review/",
+        "title": "This portable soundbar solved my biggest problem with modern-day TV audio (at a low price)",
+        "link": "https://www.zdnet.com/article/creative-stage-pro-sound-bar-review/",
+        "published": "Wed, 24 Dec 2025 15:45:41 GMT",
+        "source": "Latest news",
+        "summary": "If you're looking for great sound without breaking the bank, the Creative Stage Pro is a budget-friendly option that's worth considering."
+    },
+    {
+        "id": "https://www.zdnet.com/article/lenovo-yoga-tab-plus-review/",
+        "title": "This ultraportable Lenovo tablet has no business being this good (especially for its price)",
+        "link": "https://www.zdnet.com/article/lenovo-yoga-tab-plus-review/",
+        "published": "Wed, 24 Dec 2025 15:45:11 GMT",
+        "source": "Latest news",
+        "summary": "The 13-inch Lenovo Yoga Tab Plus is a multimedia powerhouse, with a brilliant display, reliable battery life, and powerful, room-filling speakers."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/govt-amends-cab-aggregator-rules-introduces-gender-choice-option-tipping-norms/articleshow/126162847.cms",
+        "title": "Govt amends cab aggregator rules; introduces gender choice option, tipping norms",
+        "link": "https://economictimes.indiatimes.com/tech/technology/govt-amends-cab-aggregator-rules-introduces-gender-choice-option-tipping-norms/articleshow/126162847.cms",
+        "published": "Wed, 24 Dec 2025 21:21:26 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "However, in an ecosystem where fewer than 5% of drivers are women, the option for female passengers to select a lady driver for undertaking a journey would become impractical, say industry insiders."
     }
 ]
